[#52] flesh out graph settings editor